VNMGDC-650: Fix bug overlap issue

--- a/app/design/frontend/AmorePacific/sulwhasoo/Magento_Bundle/web/css/source/_module.less
+++ b/app/design/frontend/AmorePacific/sulwhasoo/Magento_Bundle/web/css/source/_module.less
@@ -62,6 +62,12 @@
         }
     }
 
+    .page-layout-1column {
+        .product-info-main-attribute {
+            width: 48% !important;
+        }
+    }
+
     .bundle-options-container {
         clear: both;
 
